# dictionary_scan

./: CMakeLists.txt  dictionaries.cpp  dictionaries.h  dictionary.cpp  dictionary.h  dictionaryitem.h  dictionaryitemfactory.cpp  dictionaryitemfactory.h  dictionaryparser.cpp  dictionaryparser.h  dictionaryscanmatches.cpp  dictionaryscanmatches.h  dictionaryscanner.cpp  dictionaryscanner.h  dictionaryscanstate.cpp  dictionaryscanstate.h  dictionarytermid.h  hsbaseregexengine.cpp  hsbaseregexengine.h  hsregexengine.cpp  hsregexengine.h  hsregexscanstate.cpp  hsregexscanstate.h  idictionaryitem.h  iregexengine.h  iregexscanstate.h  iscanner.h  iscanstate.h  iverification.h  license.txt  litregexengine.cpp  litregexengine.h  normalizer.cpp  normalizer.h  regexengine.cpp  regexengine.h  simplegrep.cpp  ut_itemfactory.cpp
tools/: main.cpp
ut/: dictionaryscannerhelper.h  ut_dictionaryparser.cpp  ut_dictionaryscanmatches.cpp  ut_dictionaryscanner.cpp  ut_dictionaryscanner_serialize.cpp  ut_dictionarytermid.cpp  ut_hsregexengine.cpp  ut_itemfactory.cpp  ut_normalizer.cpp  ut_verification.cpp
verifications/: ukni.cpp  ukni.h  verification.cpp  verification.h  verificationfactory.cpp  verificationfactory.h
